# minikey-fw

./: Cargo.toml  README.md
.cargo/: config.toml
src/: keycode.rs  keypad.rs  main.rs
