[package]
name = "minikey-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.3"
defmt-rtt = "0.4.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rp2040-boot2 = "0.2.1"
rp2040-hal = { version = "0.8.0", features = ["critical-section-impl"] }
usb-device = "0.2.9"
usbd-hid = "0.6.1"
